CSS, HTML, and pics

--- a/index.html
+++ b/index.html
@@ -27,19 +27,63 @@
     <!-- Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet">
 
 
-  <div class="container">
+  <div class="topnav">
     <ul>
-      <li class="one"><a href="#">Uno</a></li><!--
-   --><li class="two"><a href="#">Dos</a></li><!--
-   --><li class="three"><a href="#">Tres</a></li><!--
-   --><li class="four"><a href="#">Quatro</a></li>
-      <hr />
+      <li class="one"><a href="#">Home</a></li><!--
+   --><li class="two"><a href="#">About Us</a></li><!--
+   --><li class="three"><a href="#">The Story</a></li><!--
+   --><li class="four"><a href="#">First Timers</a></li>
+      <hr>
     </ul>
   </div>
 
-  <div class="parallax"></div>
+
+  <div class="crop-height">
+    <div class="image-container">
+      <img src="https://pbp1995.github.io/sargam_site/images/nagada.jpg" alt="nagada" class="nagada" >
+          <div class="container">
+            <div class="row">
+              <div class="col-lg">
+              <br> SARGAM GROUP of SOUTHERN CALIFORNIA PRESENTS: <br> <h1>Garba</h1> A NAVRATRI CELEBRATION
+              </div>
+              <div class="col-lg">
+                <br>University High School <br> 4771 Campus Dr. <br> Irvine,CA <br> October 6 & 13 <br> 8 PM
+              </div>
+            </div>
+            <br> <br>
+            <button type="button" class="btn-1 btn-primary btn-lg btn-block">Buy Tickets</button>  
+          </div>
+    </div>      
+  </div>
+
+<br>
+<br>
+
+
+
+  <div class="copy">
+    <div class="title">
+      EVENT INFORMATION
+    </div>
+    <div class="text">
+      Garba is a great event to get together with friends and family. There is food, fun, and of course plenty of dancing. We host this event twice a year, and hope you can join us! Please don't feel restricted because of race, age, or anything else; we warmly welcome everyone to join with us in this celebration!
+    </div>
+  </div>
+ 
+  <div></div>
+
+  <div>
+    <div class="title">
+        ABOUT US
+      </div>
+      <div class="text">
+        Founded by some close friends in 2009, the Sargam Group of Southern California is focused around sponsoring family oriented events to provide enrichment of the Indian culture. We have been highly successful in hosting the University High School Raas Garba for the past 8 years. By keeping the events affordable and our overheads low, along with a lot of support from our great sponsors, we have been able to donate a substantial amount of money to some excellent causes. The affordability of our events have encouraged entire families to be able to celebrate Navratri together. Our focus on families with young children as our main target demographic has also made the Sargam Group Raas Garba as one of the most anticipated event of the year by local children.
+      </div>
+  </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
