--- a/index.html
+++ b/index.html
@@ -31,39 +31,35 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet">
 
 
-  <div class="topnav">
+  <div class="topnav sticky-top">
     <ul>
       <li class="one"><a href="#">Home</a></li><!--
-   --><li class="two"><a href="#">About Us</a></li><!--
-   --><li class="three"><a href="#">The Story</a></li><!--
-   --><li class="four"><a href="#">First Timers</a></li>
-      <hr>
+   --><li class="two"><a href="#">Event Information</a></li><!--
+   --><li class="three"><a href="#">About Us</a></li><!--
+   --><li class="four"><a href="#">The Story</a></li>
     </ul>
   </div>
 
-
-  <div class="crop-height">
-    <div class="image-container">
-      <img src="https://pbp1995.github.io/sargam_site/images/nagada.jpg" alt="nagada" class="nagada" >
-          <div class="container">
-            <div class="row">
-              <div class="col-lg">
-              <br> SARGAM GROUP of SOUTHERN CALIFORNIA PRESENTS: <br> <h1>Garba</h1> A NAVRATRI CELEBRATION
-              </div>
-              <div class="col-lg">
-                <br>University High School <br> 4771 Campus Dr. <br> Irvine,CA <br> October 6 & 13 <br> 8 PM
-              </div>
-            </div>
-            <br> <br>
-            <button type="button" class="btn-1 btn-primary btn-lg btn-block">Buy Tickets</button>  
-          </div>
-    </div>      
+<div class="parallax">
+  
+  <div class="row">
+          
+    <div class="col-sm">
+      <br> SARGAM GROUP of SOUTHERN CALIFORNIA PRESENTS: <br> <h1>Garba</h1> A NAVRATRI CELEBRATION
+    </div>
+    <div class="col-sm">
+       <br>University High School <br> 4771 Campus Dr. <br> Irvine,CA <br> September 29th & October 6th <br> 8 PM <br> <button class="button" onclick="window.location.href='http://tickets.sargamgroup.org'">  <div class= "text1">Buy Tickets!</button>
+    </div>
   </div>
 
+ 
+       
+</div>
+
 <br>
 <br>
-
-
+<br>
+<br>
 
   <div class="copy">
     <div class="title">
@@ -73,9 +69,15 @@
       Garba is a great event to get together with friends and family. There is food, fun, and of course plenty of dancing. We host this event twice a year, and hope you can join us! Please don't feel restricted because of race, age, or anything else; we warmly welcome everyone to join with us in this celebration!
     </div>
   </div>
- 
-  <div></div>
-
+<br>
+<br>
+<br>
+<br>
+  <div class="parallax1"></div>
+<br>
+<br>
+<br>
+<br>
   <div>
     <div class="title">
         ABOUT US
@@ -84,7 +86,27 @@
         Founded by some close friends in 2009, the Sargam Group of Southern California is focused around sponsoring family oriented events to provide enrichment of the Indian culture. We have been highly successful in hosting the University High School Raas Garba for the past 8 years. By keeping the events affordable and our overheads low, along with a lot of support from our great sponsors, we have been able to donate a substantial amount of money to some excellent causes. The affordability of our events have encouraged entire families to be able to celebrate Navratri together. Our focus on families with young children as our main target demographic has also made the Sargam Group Raas Garba as one of the most anticipated event of the year by local children.
       </div>
   </div>
-
+  <br>
+  <br>
+  <br>
+  <br>
+    <div class="parallax2"></div>
+  <br>
+  <br>
+  <br>
+  <br>
+    <div>
+      <div class="title">
+          The Story
+        </div>
+        <div class="text">
+          Garba is a celebratory dance of Navratri that originates from Gujurat. This dance form worships the divinity and power of the Goddess Durga or Amba. The dancing in circles and making circular movements with our hands and feet, symbolizes the circle of life, which moves from life to death to rebirth; leaving only the Goddess Durga unmoved, unchanging, and invincible.
+        </div>
+    </div>
+<br>
+<br>
+<br>
+<br>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
