--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           The Story
         </div>
         <div class="text">
-          Garba is a celebratory dance of Navratri that originates from Gujurat. This dance form worships the divinity and power of the Goddess Durga or Amba. The dancing in circles and making circular movements with our hands and feet, symbolizes the circle of life, which moves from life to death to rebirth; leaving only the Goddess Durga unmoved, unchanging, and invincible.
+          Garba is a celebratory dance of Navratri that originates from Gujurat. This dance form worships the divinity and power of the Goddess Durga or Amba. The dancing in circles and making circular movements with our hands and feet, symbolizes the circle of life, which moves from life to death to rebirth; leaving only the Goddess Durga unmoved, unchanging, and invincible. <br> <br> <button class="button" onclick="window.location.href='http://tickets.sargamgroup.org'">  <div class= "text1">Buy Tickets!</button>
         </div>
     </div>
 <br>
