--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet">
 
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
  
 <div class="parallax">
@@ -92,13 +95,20 @@
           The Story
         </div>
         <div class="text">
-          Garba is a celebratory dance of Navratri that originates from Gujurat. This dance form worships the divinity and power of the Goddess Durga or Amba. The dancing in circles and making circular movements with our hands and feet, symbolizes the circle of life, which moves from life to death to rebirth; leaving only the Goddess Durga unmoved, unchanging, and invincible. <br> <br> <button class="button" onclick="window.location.href='http://tickets.sargamgroup.org'">  <div class= "text1">Buy Tickets!</button>
+          Garba is a celebratory dance of Navratri that originates from Gujurat. This dance form worships the divinity and power of the Goddess Durga or Amba. The dancing in circles and making circular movements with our hands and feet, symbolizes the circle of life, which moves from life to death to rebirth; leaving only the Goddess Durga unmoved, unchanging, and invincible. 
         </div>
     </div>
+    
 <br>
 <br>
-<br>
-<br>
+<div class="footer">
+    <footer>
+       <div class ="text"><p>Contact information:<a href="info@sargamgroup.org">info@sargamgroup.org</a></p>
+      <a href="https://www.facebook.com/SargamGroup/" class="fa fa-facebook"></a>
+      </footer>
+  </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
